# calc-server-REST-swagger

./: .pre-commit-config.yaml  README.md  pyproject.toml
demo_poetry/: calc_server.py  clinet_server.py  clinet_server2.py
tests/: calc-server-test - Shortcut.lnk  calc_test.py
