[tool.poetry]
name = "demo-poetry"
version = "0.1.0"
description = ""
authors = ["amitaiturkel <amitai.turkel@gmail.com>"]
readme = "README.md"
packages = [{include = "demo_poetry"}]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.3.3"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
